name:                nagios-plugin-retcond
version:             0.1.1.0
synopsis:            Nagios plugin to monitor retcond
description:         Nagios plugin to generate performance data from
                     ekg metrics exposed by retcond.
homepage:            https://github.com/anchor/nagios-plugin-retcond
license:             BSD3
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2015 Anchor Systems
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository    head
  type:              git
  location:          git@github.com:anchor/nagios-plugin-retcond.git

library
  exposed-modules:     System.Nagios.Plugin.Retcond
  build-depends:       base >=4.7 && <4.8,
                       bytestring,
                       containers,
                       lens,
                       nagios-check >= 0.3,
                       optparse-applicative,
                       text,
                       transformers,
                       wreq >= 0.4,
                       aeson
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable check_retcond
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       nagios-check >= 0.3.1,
                       nagios-plugin-retcond
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hspec
  hs-source-dirs:      tests
  main-is:             HSpec.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.5 && <4.8,
                       HUnit,
                       bytestring,
                       hspec,
                       nagios-check,
                       nagios-plugin-retcond,
                       text,
                       transformers
